[package]
name = "sexpr-out"
description = "Tools for writing S-Expressions from Rust data."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sexpr-out.git"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
itertools = "0.13.0"
objio = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.4"
